# AgenticAI

./: .gitignore  pyproject.toml
agentic_ai_essentials/unit1/: groq_unit1.py
agentic_ai_essentials/unit2/llm_connection/: groq_unit2_ex1.py  groq_unit2_ex2.py  groq_unit2_ex3.py
agentic_ai_essentials/unit2/modular_prompts/: essentials_paths.py  llm_invoke.py  llms.py  main.py  prompt_builder.py  utils.py
agentic_ai_essentials/unit2/modular_prompts/config/: config.yaml  prompt_config.yaml
agentic_ai_essentials/unit2/modular_prompts/output/: summarization_prompt_cfg5_llm_response.md  summarization_prompt_cfg5_prompt.md  summarization_prompt_cfg6_llm_response.md  summarization_prompt_cfg6_prompt.md
agentic_ai_essentials/unit2/prompt_engineering/: llm_prompt.py  prompt_1.py  prompt_2.py  prompt_3.py  prompt_4.py  prompt_5.py
agentic_ai_essentials/unit3/: check_db.py  main.py  rag_paths.py  test.py  utils.py
agentic_ai_essentials/unit3/DB/: chroma.sqlite3
agentic_ai_essentials/unit3/data/: pub4.txt
agentic_ai_essentials/unit3/logs/: app.logs
agentic_ai_essentials/unit3/src/db_setup/: initialize_db.py
agentic_ai_essentials/unit3/src/ingestion/: chunk_document.py  embed_document.py  file_reader.py  load_documents.py
agentic_ai_essentials/unit3/src/logging/: logger.py
agentic_ai_essentials/unit3/src/response/: response.py
agentic_ai_essentials/unit3/src/retrieval/: retrieve_doc.py
